@@ -233,6 +233,7 @@ nv8600mgt_backlight_probe(void)
 	break;
 
       case MACHINE_MACBOOKPRO_5:
+      case MACHINE_MACBOOKPRO_6:
       case MACHINE_MACBOOK_5:
       case MACHINE_MACBOOK_6:
       case MACHINE_MACBOOKAIR_2:
